@@ -11,6 +11,11 @@ Revision history for Fatal
 	* Nuking subroutines at end of lexical scope moved into
 	  own subroutine.
 
+	* Perl 5.8 support working!  Backcompat mode not yet
+	  supported, nor is autodie with user defined subs.
+	  The 5.8 support that is there is rather kludgy, and
+	  still needs a lot of work.
+
 1.10_04 Sat Jun 14 15:02:17 AUSEST 2008
 	* Made all $VERSION numbers more friendly to static code
 	  analysis tools (including CPAN).
